--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^6.8.3"
+    "mongoose": "^6.8.3",
+    "validator": "^13.7.0"
   }
 }
