--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^6.8.3",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "bcryptjs": "^2.4.3"
   }
 }
