--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "express": "^4.18.2",
     "mongoose": "^6.8.3",
     "validator": "^13.7.0",
-    "bcryptjs": "^2.4.3"
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.3",
+    "jsonwebtoken": "^8.5.1"
   }
 }
