--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "celebrate": "^15.0.1",
     "express": "^4.18.2",
     "mongoose": "^6.8.3",
     "validator": "^13.7.0",
