--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "validator": "^13.7.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "winston": "^3.8.2",
+    "express-winston": "^4.2.0"
   }
 }
