--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "dotenv": "^16.0.3",
     "jsonwebtoken": "^8.5.1",
     "winston": "^3.8.2",
-    "express-winston": "^4.2.0"
+    "express-winston": "^4.2.0",
+    "helmet": "^6.0.1",
+    "cors": "^2.8.5",
+    "express-rate-limit": "^6.7.0"
   }
 }
