--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,8 @@
 {
   "extends": "airbnb-base",
   "rules": {
-    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
-    "consistent-return": "off",
-    "object-curly-newline": "off"
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }]
+    // "consistent-return": "off",
+    // "object-curly-newline": "off"
   }
 }
